# exvpn-api

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
migrations/: env.py
src/: Dockerfile  main.py
src/api/: deps.py
src/api/v1/auth/: exception.py  router.py  schemas.py
src/api/v1/clients/: exception.py  router.py  schemas.py
src/api/v1/dependencies/: auth.py  services.py
src/api/v1/server/: exception.py  router.py  schemas.py
src/database/: connection.py  models.py
src/database/management/operations/: client.py  server_config.py  user.py
src/minio/: client.py  connection.py
src/redis/: client.py  connection.py
src/schemas/: auth.py  client.py  server.py
src/services/: __init__.py  amnezia_config_decoder.py  amnezia_config_generator.py  awg_configurator.py  client_configurator.py  client_service.py  container_manager.py  docker_client.py  host_files.py  key_generator.py
src/services/management/: exceptions.py  ip_utils.py  schemas.py
src/services/management/templates/: awg_client_template.conf
src/utils/: security.py  settings.py
