[tool.poetry]
name = "exvpn-management-api"
version = "0.1.0"
description = "API для управления AmneziaWG VPN сервером"
authors = ["homostultus39"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.122.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.0.1"
python-multipart = "^0.0.6"
aiodocker = "^0.21.0"
aiofiles = "^23.2.1"
cryptography = "^41.0.7"
minio = "^7.2.0"
python-dotenv = "^1.0.0"
asyncpg = "^0.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
